--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "minimist": "^1.1.0",
     "mkdirp": "^0.5.0",
     "msee": "^0.1.1",
+    "osenv": "^0.1.0",
     "parents": "^1.0.0",
     "process": "^0.7.0",
     "read-json": "0.0.0",
