Add an install spinner

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "wizzard": "1.0.0",
     "xtend": "^4.0.0",
     "uuid": "^1.4.1",
-    "url": "^0.10.1"
+    "url": "^0.10.1",
+    "cli-spinner": "~0.1.5"
   },
   "licenses": [
     {
